# FR

./: README.md  commands.md
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: History.tsx  Settings.tsx  SidePanel.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
app/src/context/: HistoryContext.tsx  SettingsContext.tsx
app/src/utils/: historyUtils.ts
crates/cli/: Cargo.toml
fr-cli-suite/: Cargo.toml
