[package]
name = "fr"
version = "0.1.0"
description = "fr is a high-performance, cross-platform developer utility suite built with Rust and Tauri. It combines a lightning-fast CLI with a beautiful Terminal-First GUI, allowing you to manage your projects, deployments, and resources with modern energy."
authors = ["Arpit Sarang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
core-lib = { path = "../../crates/core-lib" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
